--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@shelf/xxxxxx",
-  "version": "0.0.0",
-  "description": "xxxxxx",
+  "name": "@shelf/datetime",
+  "version": "0.2.31",
+  "description": "Shelf dates library",
   "license": "MIT",
   "author": {
-    "name": "Vlad Holubiev",
+    "name": "Shelf",
     "email": "vlad@shelf.io",
     "url": "https://shelf.io"
   },
@@ -36,11 +36,10 @@
       ".husky/validate-circleci-config.sh"
     ]
   },
-  "babel": {
-    "extends": "@shelf/babel-config/backend"
-  },
   "prettier": "@shelf/prettier-config",
-  "dependencies": {},
+  "dependencies": {
+    "dayjs": "1.11.3"
+  },
   "devDependencies": {
     "@babel/cli": "7.19.3",
     "@babel/core": "7.19.6",
@@ -48,7 +47,9 @@
     "@shelf/eslint-config": "2.22.3",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.9",
+    "@shelf/types": "16.8.5",
     "@types/jest": "29.2.0",
+    "@types/lodash": "4.14.177",
     "@types/node": "16",
     "eslint": "8.26.0",
     "husky": "8.0.1",
