--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,14 @@
   "extends": [
     "@shelf/eslint-config/typescript"
   ],
+  "overrides": [
+      {
+        "files": ["jest.config.js", "webpack-base.config.js"],
+        "rules": {
+          "@typescript-eslint/no-var-requires": "warn"
+        }
+      }
+  ],
   "rules": {
     "complexity": 0
   }
