--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "labels": ["dependencies", "backend"],
+  "labels": ["dependencies", "frontend"],
   "ignoreDeps": [
     "cimg/node",
     "@types/node"
