--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   },
   "main": "lib",
   "types": "lib/index.d.ts",
+  "keywords": [
+    "dates",
+    "date",
+    "time",
+    "datetime",
+    "dayjs",
+    "day.js",
+    "day"
+  ],
   "files": [
     "lib"
   ],
