chore: add size limit dep

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@shelf/eslint-config": "2.29.3",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.11",
+    "@size-limit/esbuild-why": "8.2.6",
+    "@size-limit/preset-small-lib": "8.2.6",
     "@types/jest": "29.5.2",
     "@types/lodash": "4.14.195",
     "@types/node": "16",
@@ -68,6 +70,7 @@
     "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "13.2.3",
     "prettier": "2.8.8",
+    "size-limit": "8.2.6",
     "typescript": "5.1.6",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.7.0",
