--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "@shelf/datetime",
   "version": "0.4.0",
   "description": "Shelf dates library",
-  "license": "MIT",
-  "author": {
-    "name": "Shelf",
-    "email": "vlad@shelf.io",
-    "url": "https://shelf.io"
-  },
-  "main": "lib",
-  "types": "lib/index.d.ts",
   "keywords": [
     "dates",
     "date",
@@ -19,6 +11,14 @@
     "day.js",
     "day"
   ],
+  "license": "MIT",
+  "author": {
+    "name": "Shelf",
+    "email": "vlad@shelf.io",
+    "url": "https://shelf.io"
+  },
+  "main": "lib",
+  "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
@@ -30,10 +30,10 @@
     "coverage": "yarn test --coverage",
     "lint": "yarn lint:ci --fix",
     "lint:ci": "eslint . --ext .js,.ts,.json",
+    "lint:size": "size-limit",
     "prepack": "yarn build",
     "test": "TZ=UTC jest src",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch"
+    "type-check": "tsc --noEmit"
   },
   "lint-staged": {
     "*.{html,md,yml}": [
@@ -85,5 +85,15 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "lib/index.js",
+      "limit": "4.3 KB"
+    },
+    {
+      "path": "lib/addMonths.js",
+      "limit": "632 B"
+    }
+  ]
 }
