--- a/package.json
+++ b/package.json
@@ -72,11 +72,7 @@
     "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "size-limit": "8.2.6",
-    "typescript": "5.1.6",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.7.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "5.1.6"
   },
   "peerDependencies": {
     "dayjs": "~1.11.0"
