--- a/package.json
+++ b/package.json
@@ -38,24 +38,16 @@
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
-    "*.{html,md,yml}": [
-      "prettier --write"
-    ],
-    "*.{js,ts,json}": [
-      "eslint --fix"
-    ],
-    ".circleci/config.yml": [
-      ".husky/validate-circleci-config.sh"
-    ]
+    "*.{html,md,yml}": "prettier --write",
+    "*.{js,ts,json}": "eslint --fix",
+    ".circleci/config.yml": ".husky/validate-circleci-config.sh"
   },
   "prettier": "@shelf/prettier-config",
   "dependencies": {
     "dayjs": "1.11.9"
   },
   "devDependencies": {
-    "@babel/cli": "7.22.5",
     "@babel/core": "7.22.5",
-    "@shelf/babel-config": "2.0.1",
     "@shelf/eslint-config": "2.29.3",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.11",
@@ -63,8 +55,6 @@
     "@size-limit/preset-small-lib": "8.2.6",
     "@types/jest": "29.5.2",
     "@types/node": "16",
-    "babel-loader": "^9.0.1",
-    "babel-preset-minify": "0.5.2",
     "eslint": "8.44.0",
     "husky": "8.0.3",
     "jest": "29.5.0",
@@ -72,6 +62,7 @@
     "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "size-limit": "8.2.6",
+    "ts-jest": "29.1.1",
     "typescript": "5.1.6"
   },
   "peerDependencies": {
