--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,6 @@ jobs:
       - checkout
       - install_deps
       - run: yarn test
-      - run: yarn type-check
       - run: yarn lint:ci
+      - run: yarn build
+      - run: yarn lint:size
