--- a/package.json
+++ b/package.json
@@ -43,22 +43,23 @@
     ".circleci/config.yml": ".husky/validate-circleci-config.sh"
   },
   "prettier": "@shelf/prettier-config",
+  "eslintConfig": {
+    "extends": "@shelf/eslint-config/typescript"
+  },
   "dependencies": {
     "dayjs": "1.11.10"
   },
   "devDependencies": {
-    "@babel/core": "7.23.2",
     "@shelf/eslint-config": "3.10.0",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.11",
     "@size-limit/esbuild-why": "10.0.1",
     "@size-limit/preset-small-lib": "10.0.1",
     "@types/jest": "29.5.6",
-    "@types/node": "16",
     "eslint": "8.52.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "lint-staged": "13.3.0",
+    "lint-staged": "15.0.2",
     "prettier": "3.0.3",
     "size-limit": "10.0.1",
     "ts-jest": "29.1.1",
