--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prettier": "3.0.3",
     "size-limit": "10.0.1",
     "ts-jest": "29.1.1",
+    "ts-jest-resolver": "2.0.1",
     "typescript": "5.2.2"
   },
   "engines": {
