fix: GEM-9648 Fix ESM for Meteor

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "type": "module",
   "exports": "./lib/index.js",
+  "module": "./lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib"
