--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint:ci": "eslint . --ext .js,.ts,.json",
     "lint:size": "size-limit",
     "prepack": "yarn build",
+    "prepare": "husky",
     "test": "TZ=UTC jest",
     "type-check": "tsc --noEmit"
   },
@@ -50,21 +51,21 @@
     "dayjs": "1.11.10"
   },
   "devDependencies": {
-    "@shelf/eslint-config": "3.10.0",
+    "@shelf/eslint-config": "3.15.1",
     "@shelf/prettier-config": "1.0.0",
-    "@shelf/tsconfig": "0.0.11",
-    "@size-limit/esbuild-why": "10.0.1",
-    "@size-limit/preset-small-lib": "10.0.1",
-    "@types/jest": "29.5.6",
+    "@shelf/tsconfig": "0.1.0",
+    "@size-limit/esbuild-why": "11.1.2",
+    "@size-limit/preset-small-lib": "11.1.2",
+    "@types/jest": "29.5.12",
     "eslint": "8.52.0",
-    "husky": "8.0.3",
+    "husky": "9.0.11",
     "jest": "29.7.0",
-    "lint-staged": "15.0.2",
-    "prettier": "3.0.3",
-    "size-limit": "10.0.1",
-    "ts-jest": "29.1.1",
+    "lint-staged": "15.2.2",
+    "prettier": "3.2.5",
+    "size-limit": "11.1.2",
+    "ts-jest": "29.1.2",
     "ts-jest-resolver": "2.0.1",
-    "typescript": "5.2.2"
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": ">=18"
