--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint:size": "size-limit",
     "prepack": "yarn build",
     "prepare": "husky",
-    "test": "TZ=UTC jest",
+    "test": "jest",
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
