--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "rm -rf lib/ && tsc",
     "coverage": "yarn test --coverage",
     "lint": "yarn lint:ci --fix",
-    "lint:ci": "eslint . --ext .js,.ts,.json",
+    "lint:ci": "eslint .",
     "lint:size": "size-limit",
     "prepack": "yarn build",
     "prepare": "husky",
@@ -40,24 +40,21 @@
     "type-check": "tsc --noEmit"
   },
   "prettier": "@shelf/prettier-config",
-  "eslintConfig": {
-    "extends": "@shelf/eslint-config/typescript"
-  },
   "dependencies": {
     "dayjs": "1.11.13"
   },
   "devDependencies": {
-    "@shelf/eslint-config": "3.15.1",
+    "@shelf/eslint-config": "5.3.4",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.1.0",
     "@size-limit/esbuild-why": "11.2.0",
     "@size-limit/preset-small-lib": "11.2.0",
     "@types/jest": "29.5.14",
-    "eslint": "8.57.1",
+    "eslint": "9.39.1",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "lint-staged": "15.5.1",
-    "prettier": "3.5.3",
+    "prettier": "3.6.2",
     "size-limit": "11.2.0",
     "ts-jest": "29.2.5",
     "ts-jest-resolver": "2.0.1",
