--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
     "@shelf/tsconfig": "0.1.0",
     "@size-limit/esbuild-why": "11.2.0",
     "@size-limit/preset-small-lib": "11.2.0",
-    "@types/jest": "29.5.14",
+    "@swc/core": "1.15.3",
+    "@swc/jest": "0.2.39",
+    "@types/jest": "30.0.0",
     "eslint": "9.39.1",
     "husky": "9.1.7",
-    "jest": "29.7.0",
-    "lint-staged": "15.5.1",
+    "jest": "30.2.0",
+    "lint-staged": "16.2.7",
     "prettier": "3.6.2",
     "size-limit": "11.2.0",
-    "ts-jest": "29.2.5",
-    "ts-jest-resolver": "2.0.1",
-    "typescript": "5.8.3"
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=18"
